--- a/app/src/main/res/layout/activity_data_kematian_edit.xml
+++ b/app/src/main/res/layout/activity_data_kematian_edit.xml
@@ -15,7 +15,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-        <RelativeLayout
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:clipToPadding="false"
@@ -23,13 +23,15 @@
             android:paddingBottom="8dp">
 
             <LinearLayout
-                android:id="@+id/tv_title"
+                android:id="@+id/ll_title"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@color/colorPrimaryDark"
                 android:orientation="vertical"
                 android:paddingVertical="24dp"
-                android:layout_alignParentTop="true">
+                app:layout_constraintBottom_toTopOf="@id/ll_form"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent">
 
                 <TextView
                     android:id="@+id/tv_siternak"
@@ -75,7 +77,9 @@
                 android:background="@drawable/rc_white"
                 android:orientation="vertical"
                 android:padding="16dp"
-                android:layout_below="@id/tv_title">
+                app:layout_constraintTop_toBottomOf="@id/ll_title"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent">
 
                 <com.google.android.material.textfield.TextInputLayout
                     android:id="@+id/til_kematian_id"
@@ -186,6 +190,7 @@
                 android:layout_marginEnd="16dp"
                 android:layout_marginRight="16dp"
                 android:layout_marginBottom="16dp"
+                android:layout_marginTop="16dp"
                 android:background="@drawable/rc_primary_dark"
                 android:elevation="5dp"
                 android:fontFamily="@font/sourcesanspro_semibold"
@@ -194,9 +199,10 @@
                 android:textAlignment="center"
                 android:textColor="@color/white"
                 android:textSize="18sp"
-                android:layout_below="@id/ll_form"
-                android:layout_alignParentBottom="true" />
+                app:layout_constraintTop_toBottomOf="@id/ll_form"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"/>
 
-        </RelativeLayout>
+        </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
 </androidx.constraintlayout.widget.ConstraintLayout>
