--- a/app/src/main/res/layout/row_data.xml
+++ b/app/src/main/res/layout/row_data.xml
@@ -8,7 +8,7 @@
     android:clipToPadding="false">
 
     <LinearLayout
-        android:id="@+id/ll_data_kematian"
+        android:id="@+id/ll_data"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
@@ -55,6 +55,7 @@
                 android:text="Tanggal"
                 android:textSize="16sp"
                 android:fontFamily="@font/sourcesanspro_semibold"
+                android:textColor="@color/black"
                 android:paddingRight="12dp"/>
             <TextView
                 android:id="@+id/tv_text1"
