--- a/app/src/main/res/layout/activity_data_kematian.xml
+++ b/app/src/main/res/layout/activity_data_kematian.xml
@@ -220,7 +220,7 @@
                     android:layout_marginTop="15dp"
                     android:layout_marginBottom="15dp"
                     android:layout_gravity="center"
-                    android:text="edit data"
+                    android:text="ubah data"
                     android:fontFamily="@font/sourcesanspro_light"
                     android:textSize="14sp"
                     android:gravity="right"
