--- a/app/src/main/res/layout/activity_data_ras_edit.xml
+++ b/app/src/main/res/layout/activity_data_ras_edit.xml
@@ -117,7 +117,7 @@
                         android:layout_height="wrap_content"
                         android:fontFamily="@font/sourcesanspro_regular"
                         android:hint="Jenis Ras"
-                        android:inputType="text"/>
+                        android:inputType="textMultiLine"/>
                 </com.google.android.material.textfield.TextInputLayout>
 
                 <com.google.android.material.textfield.TextInputLayout
@@ -135,7 +135,7 @@
                         android:layout_height="wrap_content"
                         android:fontFamily="@font/sourcesanspro_regular"
                         android:hint="Keterangan"
-                        android:inputType="text" />
+                        android:inputType="textMultiLine" />
                 </com.google.android.material.textfield.TextInputLayout>
             </LinearLayout>
 
