--- a/app/src/main/res/layout/activity_data_pemilik_add.xml
+++ b/app/src/main/res/layout/activity_data_pemilik_add.xml
@@ -117,7 +117,7 @@
                         android:layout_height="wrap_content"
                         android:fontFamily="@font/sourcesanspro_regular"
                         android:hint="Nama"
-                        android:inputType="text" />
+                        android:inputType="textMultiLine" />
                 </com.google.android.material.textfield.TextInputLayout>
             </LinearLayout>
 
