--- a/app/src/main/res/layout/actionbar_cross.xml
+++ b/app/src/main/res/layout/actionbar_cross.xml
@@ -7,14 +7,13 @@
         android:id="@+id/ib_actionbar_close"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/ic_close_black_24dp"
+        android:src="@drawable/ic_close"
         android:layout_gravity="center_vertical"
         android:scaleType="center"
         android:background="@android:color/transparent"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:tint="@color/black"/>
-
+        android:tint="@color/white"/>
 
     <TextView
         android:id="@+id/tv_actionbar_title"
@@ -25,7 +24,6 @@
         android:layout_alignParentTop="true"
         android:textSize="20sp"
         android:layout_weight="1"
-        android:textColor="@color/black"
-        />
+        android:textColor="@color/white" />
 
 </LinearLayout>
