--- a/app/src/main/res/layout/activity_data_kematian_add.xml
+++ b/app/src/main/res/layout/activity_data_kematian_add.xml
@@ -138,7 +138,7 @@
                         android:layout_height="wrap_content"
                         android:fontFamily="@font/sourcesanspro_regular"
                         android:hint="Penyebab"
-                        android:inputType="textMultiLine" />
+                        android:inputType="text" />
                 </com.google.android.material.textfield.TextInputLayout>
 
                 <com.google.android.material.textfield.TextInputLayout
@@ -156,7 +156,7 @@
                         android:layout_height="wrap_content"
                         android:fontFamily="@font/sourcesanspro_regular"
                         android:hint="Kondisi"
-                        android:inputType="textMultiLine" />
+                        android:inputType="text" />
                 </com.google.android.material.textfield.TextInputLayout>
             </LinearLayout>
 
