--- a/app/src/main/res/layout/activity_data_penyakit_edit.xml
+++ b/app/src/main/res/layout/activity_data_penyakit_edit.xml
@@ -135,7 +135,7 @@
                         android:layout_height="wrap_content"
                         android:fontFamily="@font/sourcesanspro_regular"
                         android:hint="Keterangan"
-                        android:inputType="textMultiLine" />
+                        android:inputType="text" />
                 </com.google.android.material.textfield.TextInputLayout>
             </LinearLayout>
 
